# hw3-saachigoyal26

./: Makefile  ai_documentation.txt  myst.yml  pyproject.toml
_build/html/: hw03-description.json  index.html  losc-event-tutorial.json  myst.xref.json  readme.json
_build/html/hw03-description/: index.html
_build/html/losc-event-tutorial/: index.html
_build/site/: config.json  myst.search.json  myst.xref.json  objects.inv
_build/site/content/: hw03-description.json  losc-event-tutorial.json  readme.json
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py
src/ligotools.egg-info/: PKG-INFO  SOURCES.txt
src/ligotools/tests/: test_readligo.py
